# trellodog

./: README.md  requirements.txt  setup.cfg
Trellodog/: trellodog.py
