[metadata]
name = trellodog
author = Chris Henry
author_email = henry.christopher@gmail.com
summary = Get helpful stats about Trello into Datdog
description-file = README.md
license = Apache License, Version 2.0
home-page = https://github.com/chrishenry/trellodog
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2 :: Only

[files]
packages =
    trellodog
